force-app/main/default/objects/Location/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Relationship</label>
    <referenceTo>Contact_Relationship__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>